k8s/manifests/cluster/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    app.kubernetes.io/part-of: lecture-1
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-envoy-gateway
  namespace: gateway
  labels:
    app.kubernetes.io/part-of: lecture-1
spec:
  gatewayClassName: ${GATEWAY_CLASS}
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
