k8s/manifests/cluster/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: metrics
  labels:
    app: grafana
    app.kubernetes.io/part-of: dating-app
spec:
  parentRefs:
    - name: main-envoy-gateway
      namespace: gateway
      sectionName: http
  hostnames:
    - "${METRICS_HOST}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 3000
